## Core ##
# gazelle:proto_rule proto_compile implementation stackb:rules_proto:proto_compile

## C++ ##
# gazelle:proto_plugin cpp implementation builtin:cpp
# gazelle:proto_plugin protoc-gen-grpc-cpp implementation grpc:grpc:cpp
# gazelle:proto_rule proto_cc_library implementation stackb:rules_proto:proto_cc_library
# gazelle:proto_rule proto_cc_library deps @com_google_protobuf//:protobuf
# gazelle:proto_rule proto_cc_library visibility //visibility:public
# gazelle:proto_rule grpc_cc_library implementation stackb:rules_proto:grpc_cc_library
# gazelle:proto_rule grpc_cc_library deps @com_github_grpc_grpc//:grpc++
# gazelle:proto_rule grpc_cc_library deps @com_github_grpc_grpc//:grpc++_reflection
# gazelle:proto_rule grpc_cc_library visibility //visibility:public
# gazelle:proto_language cpp plugin cpp
# gazelle:proto_language cpp plugin protoc-gen-grpc-cpp
# gazelle:proto_language cpp rule proto_compile
# gazelle:proto_language cpp rule proto_cc_library
# gazelle:proto_language cpp rule grpc_cc_library

## Go ##
# gazelle:proto_plugin protoc-gen-go implementation golang:protobuf:protoc-gen-go
# gazelle:proto_rule proto_go_library implementation stackb:rules_proto:proto_go_library
# gazelle:proto_rule proto_go_library deps @org_golang_google_protobuf//reflect/protoreflect
# gazelle:proto_rule proto_go_library deps @org_golang_google_protobuf//runtime/protoimpl
# gazelle:proto_rule proto_go_library visibility //visibility:public
# gazelle:proto_language go plugin protoc-gen-go
# gazelle:proto_language go rule proto_compile
## Hold off on proto_go_library until we upgrade the deps of this repo
## gazelle:proto_language go rule proto_go_library

## Java ##
# gazelle:proto_plugin java implementation builtin:java
# gazelle:proto_plugin protoc-gen-grpc-java implementation grpc:grpc-java:protoc-gen-grpc-java
# gazelle:proto_rule proto_java_library implementation stackb:rules_proto:proto_java_library
# gazelle:proto_rule proto_java_library deps @com_google_protobuf//:protobuf_java
# gazelle:proto_rule proto_java_library visibility //visibility:public
# gazelle:proto_rule grpc_java_library implementation stackb:rules_proto:grpc_java_library
# gazelle:proto_rule grpc_java_library deps @io_grpc_grpc_java//stub
# gazelle:proto_rule grpc_java_library deps @io_grpc_grpc_java//stub:javax_annotation
# gazelle:proto_rule grpc_java_library deps @io_grpc_grpc_java//context
# gazelle:proto_rule grpc_java_library deps @io_grpc_grpc_java//protobuf
# gazelle:proto_rule grpc_java_library deps @com_google_guava_guava//jar

# gazelle:proto_rule grpc_java_library visibility //visibility:public
# gazelle:proto_language java plugin java
# gazelle:proto_language java plugin protoc-gen-grpc-java
# gazelle:proto_language java rule proto_compile
# gazelle:proto_language java rule proto_java_library
# gazelle:proto_language java rule grpc_java_library

## Scala ##
# gazelle:proto_plugin protoc-gen-scala implementation scalapb:scalapb:protoc-gen-scala
# gazelle:proto_plugin protoc-gen-scala-grpc implementation scalapb:scalapb:protoc-gen-scala
# gazelle:proto_plugin protoc-gen-scala-grpc label @build_stack_rules_proto//plugin/scalapb/scalapb:protoc-gen-scala-grpc
# gazelle:proto_plugin protoc-gen-scala-grpc option grpc
# gazelle:proto_plugin protoc-gen-akka-grpc implementation akka:akka-grpc:protoc-gen-akka-grpc

# gazelle:proto_rule proto_scala_library implementation stackb:rules_proto:proto_scala_library
# gazelle:proto_rule proto_scala_library option --plugins=protoc-gen-scala
# gazelle:proto_rule proto_scala_library deps @maven_scala//:com_google_protobuf_protobuf_java
# gazelle:proto_rule proto_scala_library deps @maven_scala//:com_thesamet_scalapb_lenses_2_12
# gazelle:proto_rule proto_scala_library deps @maven_scala//:com_thesamet_scalapb_scalapb_runtime_2_12
# gazelle:proto_rule proto_scala_library visibility //visibility:public

# gazelle:proto_rule grpc_scala_library implementation stackb:rules_proto:grpc_scala_library
# gazelle:proto_rule grpc_scala_library option --plugins=protoc-gen-scala-grpc,protoc-gen-akka-grpc
# gazelle:proto_rule grpc_scala_library deps @maven_scala//:com_google_protobuf_protobuf_java
# gazelle:proto_rule grpc_scala_library deps @maven_scala//:com_thesamet_scalapb_lenses_2_12
# gazelle:proto_rule grpc_scala_library deps @maven_scala//:com_thesamet_scalapb_scalapb_runtime_2_12
# gazelle:proto_rule grpc_scala_library deps @maven_scala//:com_thesamet_scalapb_scalapb_runtime_grpc_2_12
# gazelle:proto_rule grpc_scala_library deps @maven_akka//:com_lightbend_akka_grpc_akka_grpc_runtime_2_12_2_1_3
# gazelle:proto_rule grpc_scala_library deps @maven_akka//:com_typesafe_akka_akka_actor_2_12
# gazelle:proto_rule grpc_scala_library deps @maven_akka//:com_typesafe_akka_akka_http_core_2_12
# gazelle:proto_rule grpc_scala_library deps @maven_akka//:com_typesafe_akka_akka_stream_2_12
# gazelle:proto_rule grpc_scala_library deps @maven_scala//:io_grpc_grpc_api
# gazelle:proto_rule grpc_scala_library deps @maven_scala//:io_grpc_grpc_protobuf
# gazelle:proto_rule grpc_scala_library deps @maven_scala//:io_grpc_grpc_stub
# gazelle:proto_rule grpc_scala_library visibility //visibility:public

# gazelle:proto_language scala plugin protoc-gen-scala
# gazelle:proto_language scala plugin protoc-gen-scala-grpc
# gazelle:proto_language scala plugin protoc-gen-akka-grpc
# gazelle:proto_language scala rule proto_compile
# gazelle:proto_language scala rule proto_scala_library
# gazelle:proto_language scala rule grpc_scala_library

## Python ##
# gazelle:proto_plugin python implementation builtin:python
# gazelle:proto_plugin pyi implementation builtin:pyi
# gazelle:proto_plugin protoc-gen-grpc-python implementation grpc:grpc:protoc-gen-grpc-python
# gazelle:proto_rule proto_python_library implementation stackb:rules_proto:proto_py_library
# gazelle:proto_rule proto_python_library deps @com_google_protobuf//:protobuf_python
# gazelle:proto_rule proto_python_library visibility //visibility:public
# gazelle:proto_rule grpc_py_library implementation stackb:rules_proto:grpc_py_library
# TODO: add grpc_py_library deps
# gazelle:proto_rule grpc_py_library visibility //visibility:public
# gazelle:proto_language python plugin python
# gazelle:proto_language python plugin pyi
# gazelle:proto_language python plugin protoc-gen-grpc-python
# gazelle:proto_language python rule proto_compile
# gazelle:proto_language python rule proto_python_library
# gazelle:proto_language python rule grpc_py_library

## ts-proto ##
# gazelle:proto_plugin ts_proto implementation stephenh:ts-proto:protoc-gen-ts-proto
# gazelle:proto_plugin ts_proto option emitImportedFiles=false
# gazelle:proto_plugin ts_proto option esModuleInterop=true
# gazelle:proto_rule proto_ts_library implementation stackb:rules_proto:proto_ts_library
# gazelle:proto_rule proto_ts_library visibility //visibility:public
# gazelle:proto_rule proto_ts_library deps //:node_modules/@nestjs/microservices
# gazelle:proto_rule proto_ts_library deps //:node_modules/@types/node
# gazelle:proto_rule proto_ts_library deps //:node_modules/long
# gazelle:proto_rule proto_ts_library deps //:node_modules/protobufjs
# gazelle:proto_rule proto_ts_library deps //:node_modules/rxjs

# Set an out_dir so that we don't conflict with the closurejs output
# gazelle:proto_rule proto_ts_library attr out_dir ts

# gazelle:proto_language ts_proto plugin ts_proto
# gazelle:proto_language ts_proto rule proto_compile
# gazelle:proto_language ts_proto rule proto_ts_library

## closure + grpc.js ##
# gazelle:proto_plugin closure_js implementation builtin:js:closure
# gazelle:proto_plugin protoc-gen-grpc-js implementation stackb:grpc.js:protoc-gen-grpc-js
# gazelle:proto_rule proto_closure_js_library implementation stackb:rules_proto:proto_closure_js_library
# gazelle:proto_rule proto_closure_js_library visibility //visibility:public
# gazelle:proto_rule grpc_closure_js_library implementation stackb:rules_proto:grpc_closure_js_library
# gazelle:proto_rule grpc_closure_js_library visibility //visibility:public
# gazelle:proto_language closure_js plugin closure_js
# gazelle:proto_language closure_js plugin protoc-gen-grpc-js
# gazelle:proto_language closure_js rule proto_compile
# gazelle:proto_language closure_js rule proto_closure_js_library
# gazelle:proto_language closure_js rule grpc_closure_js_library

## Javascript ##
# gazelle:proto_plugin node_js implementation builtin:js:common
# gazelle:proto_plugin protoc-gen-grpc-node implementation grpc:grpc-node:protoc-gen-grpc-node
# gazelle:proto_plugin protoc-gen-grpc-node option grpc_js
# gazelle:proto_plugin protoc-gen-grpc-web implementation grpc:grpc-web:protoc-gen-grpc-web
# gazelle:proto_plugin protoc-gen-grpc-web option mode=grpcwebtext
# gazelle:proto_plugin protoc-gen-grpc-web option import_style=commonjs+dts
# gazelle:proto_rule proto_nodejs_library implementation stackb:rules_proto:proto_nodejs_library
# gazelle:proto_rule proto_nodejs_library visibility //visibility:public
# gazelle:proto_rule grpc_nodejs_library implementation stackb:rules_proto:grpc_nodejs_library
# gazelle:proto_rule grpc_nodejs_library visibility //visibility:public
# gazelle:proto_rule grpc_web_js_library implementation stackb:rules_proto:grpc_web_js_library
# gazelle:proto_rule grpc_web_js_library visibility //visibility:public
# gazelle:proto_language node_js plugin node_js
# gazelle:proto_language node_js plugin protoc-gen-grpc-node
# gazelle:proto_language node_js plugin protoc-gen-grpc-web
# gazelle:proto_language node_js rule proto_compile
# gazelle:proto_language node_js rule proto_nodejs_library
# gazelle:proto_language node_js rule grpc_nodejs_library
# gazelle:proto_language node_js rule grpc_web_js_library
