load("//:plugin.bzl", "proto_plugin")

proto_plugin(
    name = "go",
    options = ["paths=source_relative"],
    outputs = [".pb.go"],
    tool = "@com_github_golang_protobuf//protoc-gen-go",
    exclusions = [
        "google/protobuf",
    ],
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "grpc_go",
    options = [
        "paths=source_relative",
        "plugins=grpc",
    ],
    outputs = [".pb.go"],
    tool = "@com_github_golang_protobuf//protoc-gen-go",
    exclusions = [
        "google/protobuf",
    ],
    visibility = ["//visibility:public"],
)
