
load("@//:rules.bzl", "proto_plugin")

proto_plugin(
    name = "java",
    out = "%{name}.jar",
    visibility = ["//visibility:public"],
)

# TODO: look into the "enable_deprecated" plugin option.
proto_plugin(
    name = "grpc_java",
    out = "%{name}.jar",
    tool = "@io_grpc_grpc_java//compiler:grpc_java_plugin",
    visibility = ["//visibility:public"],
)

java_library(
    name = "proto_deps",
    exports = [
        "@com_google_guava_guava//jar",
        "@com_google_protobuf//:protobuf_java",
    ],
    visibility = ["//visibility:public"],
)

java_library(
    name = "grpc_deps",
    exports = [
        ":proto_deps",
        "@io_grpc_grpc_java//stub",
        "@io_grpc_grpc_java//protobuf",
        "@io_grpc_grpc_java//core",
    ],
    visibility = ["//visibility:public"],
)

java_library(
    name = "grpc_netty",
    exports = [
        "@io_grpc_grpc_java//netty",
    ],
    visibility = ["//visibility:public"],
)

java_library(
    name = "grpc_okhttp",
    exports = [
        "@io_grpc_grpc_java//okhttp",
    ],
    visibility = ["//visibility:public"],
)
