load("//:plugin.bzl", "proto_plugin")

proto_plugin(
    name = "java",
    out = "{name}.jar",
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "grpc_java",
    out = "{name}_grpc.jar",
    tool = "@io_grpc_grpc_java//compiler:grpc_java_plugin",
    visibility = ["//visibility:public"],
)

java_library(
    name = "grpc_netty",
    visibility = ["//visibility:public"],
    exports = [
        "@io_grpc_grpc_java//netty",
    ],
)
