
load("@//:rules.bzl", "proto_plugin")

proto_plugin(
    name = "js",
    options = ["import_style=commonjs", "binary"],
    outputs = ["{basename}_pb.js"],
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "grpc_js",
    outputs = ["{basename}_grpc_pb.js"],
    tool = "@com_github_grpc_grpc//:grpc_node_plugin",
    visibility = ["//visibility:public"],
)
