
load("//:plugin.bzl", "proto_plugin")

proto_plugin(
    name = "objc",
    outputs = [
        "{basename|pascal}.pbobjc.h",
        "{basename|pascal}.pbobjc.m",
    ],
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "grpc_objc",
    outputs = [
        "{basename|pascal}.pbrpc.h",
        "{basename|pascal}.pbrpc.m",
    ],
    tool = "@com_github_grpc_grpc//:grpc_objective_c_plugin",
    visibility = ["//visibility:public"],
)
