load("//:plugin.bzl", "proto_plugin")

proto_plugin(
    name = "objc",
    outputs = [
        "{protopath|pascal|objc}.pbobjc.h",
        "{protopath|pascal|objc}.pbobjc.m",
    ],
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "grpc_objc",
    outputs = [
        "{protopath|pascal|objc}.pbrpc.h",
        "{protopath|pascal|objc}.pbrpc.m",
    ],
    tool = "@com_github_grpc_grpc//:grpc_objective_c_plugin",
    visibility = ["//visibility:public"],
)

objc_library(
    name = "grpc_lib",
    srcs = [
        "@com_github_grpc_grpc//:src/objective-c/ProtoRPC/ProtoMethod.m",
        "@com_github_grpc_grpc//:src/objective-c/ProtoRPC/ProtoMethod.h",
        "@com_github_grpc_grpc//:src/objective-c/ProtoRPC/ProtoRPC.m",
        "@com_github_grpc_grpc//:src/objective-c/ProtoRPC/ProtoRPC.h",
        "@com_github_grpc_grpc//:src/objective-c/ProtoRPC/ProtoService.m",
        "@com_github_grpc_grpc//:src/objective-c/ProtoRPC/ProtoService.h",
    ],
    includes = ["external/com_github_grpc_grpc/src/objective-c"],
)
