load("//:plugin.bzl", "proto_plugin")

proto_plugin(
    name = "php",
    outputs = [
        "{protopath|php}.php",
        "GPBMetadata/{protopath|php}.php",
    ],
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "grpc_php",
    outputs = [
        "GPBMetadata/{protopath|php}.php", # Cannot predict output filename without knowing the service name
    ],
    tool = "@com_github_grpc_grpc//:grpc_php_plugin",
    visibility = ["//visibility:public"],
)
