load("//:plugin.bzl", "proto_plugin")

proto_plugin(
    name = "php",
    output_directory = True, # Plugin outputs cannot be predicted as they depend on service/package name
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "grpc_php",
    output_directory = True, # Plugin outputs cannot be predicted as they depend on service/package name
    tool = "@com_github_grpc_grpc//:grpc_php_plugin",
    visibility = ["//visibility:public"],
)
