filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "//pkg/language/protobuf:all_files",
        "//pkg/plugin/akka/akka_grpc:all_files",
        "//pkg/plugin/builtin:all_files",
        "//pkg/plugin/gogo/protobuf:all_files",
        "//pkg/plugin/golang/protobuf:all_files",
        "//pkg/plugin/grpc/grpc:all_files",
        "//pkg/plugin/grpc/grpcgo:all_files",
        "//pkg/plugin/grpc/grpcjava:all_files",
        "//pkg/plugin/grpc/grpcnode:all_files",
        "//pkg/plugin/grpc/grpcweb:all_files",
        "//pkg/plugin/grpcecosystem/grpcgateway:all_files",
        "//pkg/plugin/scalapb/scalapb:all_files",
        "//pkg/plugin/stackb/grpc_js:all_files",
        "//pkg/plugin/stephenh/ts-proto:all_files",
        "//pkg/plugintest:all_files",
        "//pkg/protoc:all_files",
        "//pkg/rule/rules_cc:all_files",
        "//pkg/rule/rules_closure:all_files",
        "//pkg/rule/rules_go:all_files",
        "//pkg/rule/rules_java:all_files",
        "//pkg/rule/rules_nodejs:all_files",
        "//pkg/rule/rules_python:all_files",
        "//pkg/rule/rules_scala:all_files",
    ],
    visibility = ["//:__pkg__"],
)
