filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "//plugin/akka/akka-grpc:all_files",
        "//plugin/builtin:all_files",
        "//plugin/gogo/protobuf:all_files",
        "//plugin/golang/protobuf:all_files",
        "//plugin/grpc/grpc:all_files",
        "//plugin/grpc/grpc-go:all_files",
        "//plugin/grpc/grpc-java:all_files",
        "//plugin/grpc/grpc-node:all_files",
        "//plugin/scalapb/scalapb:all_files",
        "//plugin/stackb/grpc_js:all_files",
        "//plugin/stephenh/ts-proto:all_files",
    ],
    visibility = ["//visibility:public"],
)
