filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "//plugins/cc:all_files",
        "//plugins/closure:all_files",
        "//plugins/grpc_js:all_files",
        "//plugins/java:all_files",
        "//plugins/nodejs:all_files",
        "//plugins/python:all_files",
    ],
    visibility = ["//visibility:public"],
)
