load("//protobuf:toolchains.bzl", "protoc_toolchain")
load(
    "@build_stack_rules_proto//:proto_dependency.bzl",
    "proto_dependency",
)

# Define toolchain type for protoc compiler
toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

# Create the default protoc toolchain
protoc_toolchain(
    name = "protoc",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "protoc_toolchain",
    toolchain = ":protoc",
    toolchain_type = ":toolchain_type",
)

proto_dependency(
    name = "com_google_protobuf",
    repository_rule = "http_archive",
    sha256 = "d0f5f605d0d656007ce6c8b5a82df3037e1d8fe8b121ed42e536f569dec16113",
    strip_prefix = "protobuf-3.14.0",
    urls = ["https://github.com/protocolbuffers/protobuf/archive/v3.14.0.tar.gz"],
    visibility = ["//visibility:public"],
)
