load(":toolchain.bzl", "protoc")

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

protoc(
    name = "protoc",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "toolchain",
    toolchain = ":protoc",
    toolchain_type = ":toolchain_type",
)

filegroup(
    name = "all_files",
    srcs = [
        "BUILD.bazel",
        "toolchain.bzl",
    ],
    visibility = ["//:__pkg__"],
)
