load("@build_stack_rules_proto//:proto_language_info_provider_test.bzl", "proto_language_info_provider_test")
load("@build_stack_rules_proto//:proto_plugin_info_provider_test.bzl", "proto_plugin_info_provider_test")
load("@build_stack_rules_proto//:proto_rule_info_provider_test.bzl", "proto_rule_info_provider_test")
load("@build_stack_rules_proto//:proto_rule_test.bzl", "proto_rule_test")
load("@build_stack_rules_proto//:proto_rule_bazel_test.bzl", "proto_rule_bazel_test")
load("@build_stack_rules_proto//:plugin.bzl", "proto_plugin")
load("@build_stack_rules_proto//:proto_language_test.bzl", "proto_language_test")
load("@build_stack_rules_proto//:proto_language.bzl", "proto_language")
load("@build_stack_rules_proto//:proto_rule.bzl", "proto_rule")

# ===================================================================
# language: python_language
# ===================================================================

proto_language(
    name = "python",
    rules = [
        "py_proto_compile",
        "py_proto_library",
    ],
    visibility = ["//visibility:public"],
    deps = ["//protobuf:com_google_protobuf"],
)

# ===================================================================
# plugin: python_plugin
# ===================================================================

proto_plugin(
    name = "python_plugin",
    exclusions = [
        "google/protobuf",
    ],
    outputs = ["{protopath|python}_pb2.py"],
    protoc_plugin_name = "python",
    visibility = ["//visibility:public"],
    deps = [
        "//protobuf:com_google_protobuf",
    ],
)

proto_plugin_info_provider_test(
    name = "python_plugin_info_provider_test",
    srcs = ["python_plugin_info_provider_test.golden.1.prototext"],
    deps = [":python_plugin"],
)

# ===================================================================
# rule: py_proto_compile
# ===================================================================

proto_rule(
    name = "py_proto_compile",
    language = ":python",
    plugins = [":python_plugin"],
    visibility = ["//visibility:public"],
)

proto_rule_info_provider_test(
    name = "py_proto_compile_info_provider_test",
    srcs = ["py_proto_compile_info_provider_test.golden.1.prototext"],
    deps = [":py_proto_compile"],
)

proto_rule_test(
    name = "py_proto_compile_rule_test",
    srcs = [
        "py_proto_compile.bzl",
        "py_proto_compile_deps.bzl",
    ],
    deps = [":py_proto_compile"],
)

proto_rule_bazel_test(
    name = "py_proto_compile_rule_bazel_test",
    tags = ["exclusive"],
    deps = ["py_proto_compile"],
)

proto_language_info_provider_test(
    name = "python_info_provider_test",
    srcs = ["python_info_provider_test.golden.1.prototext"],
    deps = [":python"],
)

proto_language_test(
    name = "python_language_test",
    srcs = [
        "python.bzl",
    ],
    deps = [":python"],
)

# proto_plugin(
#     name = "grpc_python_plugin",
#     exclusions = [
#         "google/protobuf",
#     ],
#     outputs = ["{protopath|python}_pb2_grpc.py"],
#     tool = "@com_github_grpc_grpc//src/compiler:grpc_python_plugin",
#     visibility = ["//visibility:public"],
# )

# proto_plugin(
#     name = "grpclib_python_plugin",
#     outputs = ["{protopath}_grpc.py"],
#     tool = "//python/grpclib:plugin",
#     visibility = ["//visibility:public"],
# )

filegroup(
    name = "all_files",
    testonly = True,
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
