load("@build_stack_rules_proto//rules:proto_plugin.bzl", "proto_plugin")

proto_plugin(
    name = "python_plugin",
    exclusions = [
        "google/protobuf",
    ],
    outputs = ["{protopath|python}_pb2.py"],
    protoc_plugin_name = "python",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "generated_rules",
    srcs = [
        "py_proto_compile.bzl",
        "py_proto_compile_deps.bzl",
    ],
    visibility = ["//language/python:__pkg__"],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "grpc_python_plugin",
    exclusions = [
        "google/protobuf",
    ],
    outputs = ["{protopath|python}_pb2_grpc.py"],
    tool = "@com_github_grpc_grpc//src/compiler:grpc_python_plugin",
    visibility = ["//visibility:public"],
    deps = ["//core/grpc:com_github_grpc_grpc"],
)

# proto_plugin(
#     name = "grpclib_python_plugin",
#     outputs = ["{protopath}_grpc.py"],
#     tool = "//python/grpclib:plugin",
#     visibility = ["//visibility:public"],
# )
