load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@build_stack_rules_proto//rules:proto_compile.bzl", "proto_compile")

# gazelle:proto_lang cc enable true
# gazelle:proto_lang closure_js enable false
# gazelle:proto_lang common_js enable false
# gazelle:proto_lang gogofast enable true
# gazelle:proto_lang java enable true
# gazelle:proto_lang py enable false

proto_library(
    name = "routeguide_proto",
    srcs = ["routeguide.proto"],
    visibility = ["//visibility:public"],
)

proto_compile(
    name = "routeguide_cc_compile",
    genfiles = [
        "routeguide.pb.cc",
        "routeguide.pb.h",
        "routeguide.grpc.pb.cc",
        "routeguide.grpc.pb.h",
    ],
    plugins = [
        "//protoc:cc_proto_plugin",
        "//grpc/grpc:grpc_cpp_plugin",
    ],
    proto = "routeguide_proto",
)

proto_compile(
    name = "routeguide_gogofast_compile",
    genfiles = ["routeguide.pb.go"],
    options = {"//gogo:gogofast": ["plugins=grpc"]},
    plugins = ["//gogo:gogofast"],
    proto = "routeguide_proto",
)

proto_compile(
    name = "routeguide_java_compile",
    outs = {
        "//grpc/grpc-java:grpc_java_plugin": "routeguide/routeguide_grpc.srcjar",
        "//protoc:java_proto_plugin": "routeguide/routeguide.srcjar",
    },
    genfiles = [
        "routeguide.srcjar",
        "routeguide_grpc.srcjar",
    ],
    plugins = [
        "//protoc:java_proto_plugin",
        "//grpc/grpc-java:grpc_java_plugin",
    ],
    proto = "routeguide_proto",
)

go_proto_library(
    name = "routeguide_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/stackb/rules_proto/routeguide",
    proto = ":routeguide_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "routeguide",
    embed = [":routeguide_go_proto"],
    importpath = "github.com/stackb/rules_proto/routeguide",
    visibility = ["//visibility:public"],
)
