load("//:plugin.bzl", "proto_plugin")

proto_plugin(
    name = "ruby",
    outputs = ["{protopath}_pb.rb"],
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "grpc_ruby",
    outputs = ["{protopath}_services_pb.rb"],
    tool = "@com_github_grpc_grpc//:grpc_ruby_plugin",
    visibility = ["//visibility:public"],
)
