filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "depsgen.bzl",
        "example.bzl",
        "proto_compile.bzl",
        "proto_compile_gencopy.bzl",
        "proto_compiled_source_update.bzl",
        "proto_compiled_sources.bzl",
        "proto_dependency.bzl",
        "proto_descriptor_set.bzl",
        "proto_gazelle.bzl",
        "proto_plugin.bzl",
        "protogenrule.bzl",
        "providers.bzl",
        "//rules/cc:all_files",
        "//rules/closure:all_files",
        "//rules/go:all_files",
        "//rules/java:all_files",
        "//rules/nodejs:all_files",
        "//rules/private:all_files",
        "//rules/proto:all_files",
        "//rules/py:all_files",
        "//rules/scala:all_files",
    ],
    visibility = ["//:__pkg__"],
)
