
load("//:plugin.bzl", "proto_plugin")

proto_plugin(
    name = "rust",
    outputs = ["@package/{basename}.rs"],
    tool = ":protoc_gen_rust",
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "grpc_rust",
    outputs = ["@package/{basename}_grpc.rs"],
    tool = ":protoc_gen_rust_grpc",
    visibility = ["//visibility:public"],
)

# load("//rust:toolchain.bzl", "rust_proto_toolchain")

# toolchain_type(name = "toolchain")

# toolchain(
#     name = "default-proto-toolchain",
#     toolchain = ":default-proto-toolchain-impl",
#     toolchain_type = "@io_bazel_rules_rust//proto:toolchain",
# )

# rust_proto_toolchain(name = "default-proto-toolchain-impl")

alias(
    name = "protoc_gen_rust",
    actual = "@raze__protobuf_codegen__1_6_0//:cargo_bin_protoc_gen_rust",
)

alias(
    name = "protoc_gen_rust_grpc",
    actual = "@raze__grpc_compiler__0_4_0//:cargo_bin_protoc_gen_rust_grpc",
)
