load("//:plugin.bzl", "proto_plugin")

proto_plugin(
    name = "rust",
    # Use the proto basename and pipe the value to the rust_keyword function.
    # Ths function will append '_pb' if the basename is a rust keyword.
    outputs = ["{package}/{basename|rust_keyword}.rs"],
    tool = ":protoc_gen_rust",
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "grpc_rust",
    # Use the proto basename and pipe the value to the rust_keyword function.
    # Ths function will append '_pb' if the basename is a rust keyword.
    outputs = ["{package}/{basename|rust_keyword}_grpc.rs"],
    tool = ":protoc_gen_rust_grpc",
    visibility = ["//visibility:public"],
)

alias(
    name = "protoc_gen_rust",
    actual = "@raze__protobuf_codegen__1_6_0//:cargo_bin_protoc_gen_rust",
)

alias(
    name = "protoc_gen_rust_grpc",
    actual = "@raze__grpc_compiler__0_4_0//:cargo_bin_protoc_gen_rust_grpc",
)
