load("//:plugin.bzl", "proto_plugin")

proto_plugin(
    name = "rust",
    # Use the proto basename and pipe the value to the rust_keyword function.
    # Ths function will append '_pb' if the basename is a rust keyword.
    outputs = ["{basename|rust_keyword}.rs"],
    tool = "//rust/raze:cargo_bin_protoc_gen_rust",
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "grpc_rust",
    # Use the proto basename and pipe the value to the rust_keyword function.
    # Ths function will append '_pb' if the basename is a rust keyword.
    outputs = ["{basename|rust_keyword}_grpc.rs"],
    tool = "//rust/raze:cargo_bin_grpc_rust_plugin",
    visibility = ["//visibility:public"],
)
