load("//:plugin.bzl", "proto_plugin")

proto_plugin(
    name = "scala",
    # Use the proto basename and pipe the value to the scala_keyword function.
    # Ths function will append '_pb' if the basename is a scala keyword.
    out = "{name}.jar",
    tool = ":compiler_plugin_deploy.jar",
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "grpc_scala",
    # Use the proto basename and pipe the value to the scala_keyword function.
    # Ths function will append '_pb' if the basename is a scala keyword.
    out = "{name}.jar",
    options = [
        "grpc",
        # "java_conversions", # causes weird import problems
    ],
    tool = ":compiler_plugin_deploy.jar",
    visibility = ["//visibility:public"],
)

java_library(
    name = "proto_deps",
    visibility = ["//visibility:public"],
    exports = [
        "//external:io_bazel_rules_scala/dependency/com_google_protobuf/protobuf_java",
        "//external:io_bazel_rules_scala/dependency/proto/scalapb_fastparse",
        "//external:io_bazel_rules_scala/dependency/proto/scalapb_lenses",
        "//external:io_bazel_rules_scala/dependency/proto/scalapb_runtime",
    ],
)

java_library(
    name = "grpc_deps",
    visibility = ["//visibility:public"],
    exports = [
        ":proto_deps",
        "//external:io_bazel_rules_scala/dependency/proto/google_instrumentation",
        "//external:io_bazel_rules_scala/dependency/proto/grpc_context",
        "//external:io_bazel_rules_scala/dependency/proto/grpc_core",
        "//external:io_bazel_rules_scala/dependency/proto/grpc_netty",
        "//external:io_bazel_rules_scala/dependency/proto/grpc_protobuf",
        "//external:io_bazel_rules_scala/dependency/proto/grpc_stub",
        "//external:io_bazel_rules_scala/dependency/proto/guava",
        "//external:io_bazel_rules_scala/dependency/proto/netty_buffer",
        "//external:io_bazel_rules_scala/dependency/proto/netty_codec",
        "//external:io_bazel_rules_scala/dependency/proto/netty_codec_http",
        "//external:io_bazel_rules_scala/dependency/proto/netty_codec_http2",
        "//external:io_bazel_rules_scala/dependency/proto/netty_codec_socks",
        "//external:io_bazel_rules_scala/dependency/proto/netty_common",
        "//external:io_bazel_rules_scala/dependency/proto/netty_handler",
        "//external:io_bazel_rules_scala/dependency/proto/netty_handler_proxy",
        "//external:io_bazel_rules_scala/dependency/proto/netty_resolver",
        "//external:io_bazel_rules_scala/dependency/proto/netty_transport",
        "//external:io_bazel_rules_scala/dependency/proto/opencensus_api",
        "//external:io_bazel_rules_scala/dependency/proto/opencensus_contrib_grpc_metrics",
        "//external:io_bazel_rules_scala/dependency/proto/scalapb_runtime_grpc",
    ],
)

load("@io_bazel_rules_scala//scala:scala.bzl", "scala_binary", "scala_library", "scala_test")

scala_binary(
    name = "compiler_plugin",
    srcs = ["CompilerPlugin.scala"],
    main_class = "CompilerPlugin",
    visibility = ["//visibility:public"],
    runtime_deps = [
        "@com_github_scalapb_scalapb//:scala-library",
    ],
    deps = [
        "@com_github_scalapb_scalapb//:compilerplugin",
        "@com_google_protobuf//:protobuf_java",
    ],
)
